# WEB_07

./: alembic.ini  config.ini  create_basssee.py  daabee.py  fill_table.py  main.py  new.py  pyproject.toml  seed.py
flask/: app.py
flask/templates/: registrans.html
mergen/: env.py
mergen/versions/: 24e3bca8dbc3_nit.py
mergering/: env.py
mergering/versions/: fd6886162db9_init.py
select/: select_1.py  select_10.py  select_11.py  select_12.py  select_2.py  select_3.py  select_4.py  select_5.py  select_6.py  select_7.py  select_8.py  select_9.py
