[tool.poetry]
name = "webb_07"
version = "0.1.0"
description = ""
authors = ["Illy Vascilevskiy <camyray1992@gmail.com>"]
readme = "README.md"
packages = [{include = "m12_07_02"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^18.11.1"
sqlalchemy = "^2.0.16"
alembic = "^1.11.1"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"